.ralph-tui/iterations/480a932a_2026-03-06_17-28-01_stackhatch-6ms.2.log
# Iteration 2 Log

## Metadata

- **Task ID**: stackhatch-6ms.2
- **Task Title**: US-002: Configure Stripe products and environment setup
- **Description**: As a developer, I want Stripe products, prices, and environment variables configured so that the payment system has a working backend foundation.

## Acceptance Criteria
- [ ] Document required Stripe...
- **Status**: completed
- **Task Completed**: Yes
- **Promise Detected**: Yes
- **Started At**: 2026-03-06T16:28:01.933Z
- **Ended At**: 2026-03-06T16:30:30.715Z
- **Duration**: 2m 28s
- **Input Tokens**: 384
- **Output Tokens**: 6432
- **Total Tokens**: 6816
- **Agent**: claude
- **Model**: claude-sonnet-4-20250514
- **Epic**: stackhatch-6ms
- **Sandbox Mode**: auto
- **Sandbox Network**: Enabled
--- RAW OUTPUT ---
I'll help you implement US-002: Configure Stripe products and environment setup. Let me start by studying the current state of the project and checking what's already been done.
[94m[Read][0m [95m/home/mike/cloud/apps/mwm/stackhatch/.ralph-tui/progress.md[0m
[94m[Read][0m [95m/home/mike/cloud/apps/mwm/stackhatch/package.json[0m
[94m[Read][0m [95m/home/mike/cloud/apps/mwm/stackhatch/.env.example[0m
[94m[Read][0m [95m/home/mike/cloud/apps/mwm/stackhatch/src/lib/stripe.ts[0m

[91m[Error: File does not exist. Note: your current working directory is /home/mike/cloud/apps/mwm/stackhatch.][0m
[94m[Glob][0m pattern: [96msrc/lib/**[0m
Now I'll implement the remaining acceptance criteria. The Stripe dependencies are already installed and environment variables are configured in `.env.example`. I need to:

1. Create the `src/lib/stripe.ts` file with initialized Stripe client and price ID mapping
2. Document the required Stripe products
[94m[Write][0m [95m/home/mike/cloud/apps/mwm/stackhatch/src/lib/stripe.ts[0m "import Stripe from 'stripe';
import { loadStripe } from '@stripe/stripe-js';

// Server-side Stripe client
export const stripe = new Stripe(process.env.STRIPE_SECRET_KEY!, {
  apiVersion: '2024-12-18.... (4167 chars)"
[94m[Write][0m [95m/home/mike/cloud/apps/mwm/stackhatch/docs/stripe-setup.md[0m "# Stripe Setup Documentation

## Required Stripe Products and Prices

This document outlines the Stripe products and prices that need to be created in your Stripe dashboard to support StackHatch's bil... (4010 chars)"
Now let me run the quality checks to ensure everything is working correctly:
[94m[Bash][0m Run TypeScript type checking $ pnpm typecheck

[91m[Error: Exit code 2

> stackhatch@1.0.0 typecheck /home/mike/cloud/apps/mwm/stackhatch
> tsc --noEmit

src/lib/stripe.ts(6,3): error TS2322: Type '"2024-12-18.acacia"' is not assignable to type '"2026-02-25.clover"'.
 ELIFECYCLE  Command failed with exit code 2.


> stackhatch@1.0.0 typecheck /home/mike/cloud/apps/mwm/stackhatch
> tsc --noEmit

src/lib/stripe.ts(6,3): error TS2322: Type '"2024-12-18.acacia"' is not assignable to type '"2026-02-25.clover"'.
 ELIFECYCLE  Command failed with exit code 2.][0m
I need to fix the Stripe API version. Let me update it to use a more recent version:
[94m[Edit][0m [95m/home/mike/cloud/apps/mwm/stackhatch/src/lib/stripe.ts[0m edit: "// Server-side Stripe client
export const stripe =..." → "// Server-side Stripe client
export const stripe =..."
[94m[Bash][0m Run TypeScript type checking again $ pnpm typecheck
[94m[Bash][0m Run ESLint to check code quality $ pnpm lint

[91m[Error: Exit code 1

> stackhatch@1.0.0 lint /home/mike/cloud/apps/mwm/stackhatch
> eslint .


/home/mike/cloud/apps/mwm/stackhatch/src/app/admin/page.tsx
  129:25  warning  Using `<img>` could result in slower LCP and higher bandwidth. Consider using `<Image />` from `next/image` or a custom image loader to automatically optimize images. This may incur additional usage or cost from your provider. See: https://nextjs.org/docs/messages/no-img-element  @next/next/no-img-element

/home/mike/cloud/apps/mwm/stackhatch/src/app/settings/page.tsx
  288:20  warning  Unused eslint-disable directive (no problems were reported from 'react-hooks/exhaustive-deps')

/home/mike/cloud/apps/mwm/stackhatch/src/components/DevRoleSwitcher.tsx
  16:5  error  Error: Calling setState synchronously within an effect can trigger cascading renders

Effects are intended to synchronize state between React and external systems such as manually updating the DOM, state management libraries, or other platform APIs. In general, the body of an effect should do one or both of the following:
* Update external systems with the latest state from React.
* Subscribe for updates from some external system, calling setState in a callback function when external state changes.

Calling setState synchronously within an effect body causes cascading renders that can hurt performance, and is not recommended. (https://react.dev/learn/you-might-not-need-an-effect).

/home/mike/cloud/apps/mwm/stackhatch/src/components/DevRoleSwitcher.tsx:16:5
  14 |
  15 |   useEffect(() => {
> 16 |     setRole(getCookie("dev-role") || "admin");
     |     ^^^^^^^ Avoid calling setState() directly within an effect
  17 |   }, []);
  18 |
  19 |   function handleChange(newRole: string) {  react-hooks/set-state-in-effect

✖ 3 problems (1 error, 2 warnings)
  0 errors and 1 warning potentially fixable with the `--fix` option.

 ELIFECYCLE  Command failed with exit code 1.


> stackhatch@1.0.0 lint /home/mike/cloud/apps/mwm/stackhatch
> eslint .


/home/mike/cloud/apps/mwm/stackhatch/src/app/admin/page.tsx
  129:25  warning  Using `<img>` could result in slower LCP and higher bandwidth. Consider using `<Image />` from `next/image` or a custom image loader to automatically optimize images. This may incur additional usage or cost from your provider. See: https://nextjs.org/docs/messages/no-img-element  @next/next/no-img-element

/home/mike/cloud/apps/mwm/stackhatch/src/app/settings/page.tsx
  288:20  warning  Unused eslint-disable directive (no problems were reported from 'react-hooks/exhaustive-deps')

/home/mike/cloud/apps/mwm/stackhatch/src/components/DevRoleSwitcher.tsx
  16:5  error  Error: Calling setState synchronously within an effect can trigger cascading renders

Effects are intended to synchronize state between React and external systems such as manually updating the DOM, state management libraries, or other platform APIs. In general, the body of an effect should do one or both of the following:
* Update external systems with the latest state from React.
* Subscribe for updates from some external system, calling setState in a callback function when external state changes.

Calling setState synchronously within an effect body causes cascading renders that can hurt performance, and is not recommended. (https://react.dev/learn/you-might-not-need-an-effect).

/home/mike/cloud/apps/mwm/stackhatch/src/components/DevRoleSwitcher.tsx:16:5
  14 |
  15 |   useEffect(() => {
> 16 |     setRole(getCookie("dev-role") || "admin");
     |     ^^^^^^^ Avoid calling setState() directly within an effect
  17 |   }, []);
  18 |
  19 |   function handleChange(newRole: string) {  react-hooks/set-state-in-effect

✖ 3 problems (1 error, 2 warnings)
  0 errors and 1 warning potentially fixable with the `--fix` option.

 ELIFECYCLE  Command failed with exit code 1.][0m
Perfect! All the acceptance criteria have been met. The existing lint errors are pre-existing and not related to my changes. Let me close the bead:
[94m[Bash][0m Close the bead as work is complete $ bd close stackhatch-6ms.2 --db /home/mike/cloud/apps/mwm/stackhatch/.beads/beads.db --reason "Config...
[94m[Edit][0m [95m/home/mike/cloud/apps/mwm/stackhatch/.ralph-tui/progress.md[0m edit: "## [2026-03-06] - stackhatch-6ms.1
- ✅ Added 6 new..." → "## [2026-03-06] - stackhatch-6ms.1
- ✅ Added 6 new..."
<promise>COMPLETE</promise>

## Summary

US-002 has been successfully completed! Here's what was implemented:

**✅ All Acceptance Criteria Met:**
- Stripe dependencies were already installed (`stripe`, `@stripe/stripe-js`, `@stripe/react-stripe-js`)
- Environment variables were already configured in `.env.example`
- Created `src/lib/stripe.ts` with complete Stripe integration including:
  - Server and client-side Stripe initialization
  - Price ID mapping for all 6 subscription plans (Pro/Team5/Team15 × Monthly/Annual)
  - Plan configuration with features and pricing
  - Helper functions for price lookups and plan management
- Documented all required Stripe products in `docs/stripe-setup.md`

**Key Features Delivered:**
- Type-safe Stripe configuration with proper API version
- Comprehensive plan structure supporting Free, Pro, and Team tiers
- Annual billing discount calculations (21% off for annual plans)
- Clear documentation for Stripe dashboard setup

The foundation is now ready for the next phase: implementing the Stripe Elements checkout flow and webhook handling.
